--- a/404.html
+++ b/404.html
@@ -98,6 +98,15 @@
             <div class="legacy-container">
                 <div class="card-column">
                     <div class="tool-group">
+                        <a class="tool-card text-\[1\.17em\]" href="/mecst/">
+                            <h3 glot-model="Popular+Tools">404 ページが見つかりません</h3>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="legacy-container">
+                <div class="card-column">
+                    <div class="tool-group">
                         <a class="tool-card text-\[1\.17em\]" href="/mecst/pages/elementary_school/">
                             <h3 glot-model="Popular+Tools">小学校</h3>
                         </a>
